Fix product listing spacing

--- a/frontend/ecommerceapp/src/index.css
+++ b/frontend/ecommerceapp/src/index.css
@@ -783,7 +783,7 @@ a {
 
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+
   height: auto;
   flex-wrap: wrap;
   width: 90%;
